themes/CLB/css/clb.css
html {
	/*margin-left:10%;
	margin-right:10%;*/
}
.container, footer {
	width:100%;
}
h2 {
	font-weight:normal;
}
header {
	margin-top:0px;
	background-color: #333;
        position: fixed; /* Set the navbar to fixed position */
        top: 0; /* Position the navbar at the top of the page */
        width: 100%; /* Full width */
	z-index:1;
}
@media only screen and (min-width: 768px) {
	header {
		height:128px;
		display:flex;
	}
	header .navbar {
		background-color:#faf9f5;
		border-radius:0;
		padding-left:10%;
		/*padding-right:10%;*/
	}
	header .navbar .navbar-brand {
		height:65px;
		width:170px;
	}
}
@media (max-width: 811px) {
	/*.search-stats {
		display:grid;
	}*/
	header .navbar .navbar-nav > li > a{
		padding:0;
		margin:0;
	}
	ul.nav {
		display:grid;
	}
}
.navbar-toggle {
	height:fit-content;
}
.collapse.in {
	display:inline;
}
.container > .navbar-collapse {
	margin:auto;
	padding-right:60px;
	font-size:1.5rem;
}
.toc-core {
	text-align:center;
}
@media (max-width: 767px) {
	header .navbar .navbar-brand { 
		background-size: 50px;
		height:0px;
		width:70px;
		margin-right:5px;
	}
	header {
		height:auto;
	}
	/*#switch_facets {
		display:none;
	}*/
	.mainbody {
		width:100%;
	}
	#second-bar {
		display:inline-grid;
		margin-top:20px;
	}
	/*.search-controls {
		margin-top:20px;
	}*/
}
/*@media (max-width: 640px) {
        .search-controls {
                margin-top:0;
        }
        #second-bar {
                display:inline-grid;
                margin-top:0;
        }
}*/
@media (min-width: 768px) {
	.container > .navbar-collapse {
		margin:auto;
	}
}
.navbar-header {
	margin:auto;
}
.breadcrumbs .container {
	background-color:#fdfcfa;
	padding-left:10%;
	padding-right:10%;
}
.main .container {
	padding-left:10%;
	padding-right:10%;
	padding-top:0px;
}
.footer-container {
	padding-bottom:0px;
	padding-left:10%;
	padding-right:10%;
}
footer {
	margin-bottom:0px;
	padding-left:0;
	padding-right:0;
}
/* CUSTOM BAR */
.buttons {
	display:none;
}
@media only screen and (min-width: 768px) {
	.buttons {
	  display: flex;
	  float: right;
	  margin:auto;
	}
}
.buttons div {
  margin: 0px 10px;
  color: inherit;
  cursor: pointer;
}
.buttons div > * {
  pointer-events: none;
}
button#list, #table_view, #grid {
	border:none;
	background-color:transparent;
}
.buttons > button > a {
	text-decoration:none;
}
#wrapper {
	border-top:1px solid black;
}
.wrapper {
/*  display: grid;
  grid-template-columns: 1fr 1fr; */
  width: 100%;
}
.wrapper.list {
  grid-template-columns: 1fr;
}
.wrapper.grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  width: 100%;
}
.wrapper .col {
  /*width: calc(100% - 20px);
  height: 200px;
  background: #912f40;*/
  display: flex;
  /*justify-content: center;
  align-items: center;
  color: #fffffa;
  margin: 10px;*/
}

.switch {
  position: relative;
  width: 60px;
  height: 34px;
}

.switch input { 
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

/*.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}*/

input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}
.record-bar {
	display:grid;
}
.select-items {
	display:grid;
	margin:auto;
}
@media only screen and (min-width: 600px) {
	.select-items {
		display:flex;
	}
}
@media only screen and (max-width: 768px) {
	.prev-next > .pager {
		margin:0 auto;
	}
}
@media only screen and (min-width: 768px) {
	.record-bar {
		display:block;
	}
	.prev-next {
		float:left;
		margin-top:1rem;
	}
	.record-nav {
		float:right;
		padding-top:1rem;
		margin-bottom:0;
	}
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
  height: 34px;
}

.slider.round:before {
  border-radius: 50%;
}
.result-body > div.tag {
	margin-top:1rem;
	margin-bottom:3rem;
	color:grey;
}
.result-body > div.tag > span{
	font-weight:normal;
	vertical-align:super;
	margin-left:10px;
}
.result-body > strong {
	color:#a7011d;
	font-weight:normal;
}
.result-body > a, .author-data > a {
	text-decoration:underline;
	text-decoration-color: #a7011d;

}
.results_table {
	width:100%;
	table-layout: fixed;
	overflow-wrap: break-word;
}
.result-links {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
tr.results{
	background-color:red;
	display:flex;

}
td.result_col_media{
	width:100%;
}

@media only screen and (min-width: 768px) {
	.search-result-limit {
		margin-left:10%;
	}
	.search-stats {
		/*padding: 35px 0;*/
		display:flex;
	}
	/* tool bar */
	.search-controls{
		display:flex;
		width:30%;
		margin:auto;
	}
}
#second-bar{
	display:flex;
}
#choose_records{
	width:75%;
}
#switch_facets {
	display:none;
}
@media (max-width: 768px) {
        .visible-xs {
                display: block !important;
        }
}
@media only screen and (min-width: 768px) {
	#switch_facets{
		display:block;
		width:25%;
		padding-top: 1.2rem;
		padding-left: 1rem;
	}
}
.bulkActionButtons{
	display:flex;
}
.breadcrumbs {
	display:none;
	margin-top:182px;
}
.search.container.navbar{
	width:75%;
	padding:0;
	margin:auto;
}
.banner.container.navbar{
	display:flex;
	border-bottom:1px solid #f3eee5;
	height:100%;
}
@media only screen and (min-width: 768px) {
	i {
		font-size:20px;
	}
}
.btn-primary:hover {
	background-color:inherit;
	color:inherit;
}
.btn-primary i {
	display: inherit;
	color: #a7011d;
}
.ph-magnifying-glass-bold::before {
	vertical-align: middle;
}
.btn-primary {
	border-radius: 0;
	border-color: black;
	border: 2px solid;
	color: black;
}
.searchForm .btn-primary {
	padding-right:30px;
	padding-left:30px;
}
/* ... */

